# libkafkahelper

./: .gitignore  CMakeLists.txt  README.md  README_DesignPattern.md  info.txt
inc/: kafkahelper.h  kafkamanager.h
src/: kafkahelper.cpp  kafkamanager.cpp
